fixed off center wide screen

--- a/www/index.css
+++ b/www/index.css
@@ -67,7 +67,7 @@ h2{
 }
 .showMint #mint{
     opacity: 1;
-    left: min(50vh, 50vw);
+    left: max(50vh, 25vw);
 }
 h1{
     margin-top: 5vh;
@@ -125,7 +125,7 @@ button{
 
 #main_page{
     transition: opacity 1s;
-    left: calc(min(50vw,50vh));
+    left: max(50vh, 25vw);
     width: calc(99vw - min(100vw,100vh));
     top: 0;
     position: absolute;
